[project]
name = "Runner"
version = "0.1.0"
description = "Tools to easly schedule atomistic simulation workflow"
readme = "README.md"
authors = [
    { name = "Yashasvi S. Ranawat", email = "yashasvi.ranawat@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ase>=3.24.0",
    "docutils>=0.3",
    "numpy>=2.2.3",
    "psutil>=7.0.0",
]

[project.scripts]
runner = "runner.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.9",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "I", "E"]
